--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webpage</title>
+    <title>Assignment</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Webpage</h1>
+            <h1>Welcome to My first Assignment </h1>
     </header>
 
     <section id="about">
         <h2>About</h2>
-        <p>This is a simple webpage created to demonstrate HTML skills. 
-            It includes a header, an about section, an image, services, a video, a price list, a form, and a footer. 
-            The purpose of this page is to showcase basic HTML elements and structure.</p>
+            <p>I am here to create my first website using the basic HTML.
+               This is a simple webpage created to demonstrate HTML skills.  
+               It includes a header, an about section, an image, services, a video, a price list, a form, and a footer.
+               The purpose of this page is to showcase basic HTML elements and structure. Full Website is based on the creation and development.
+               This website consits of the courses and the services offered by the website.</p>
     </section>
-
     <section id="image">
         <h2>Image</h2>
-        <img src="https://via.placeholder.com/300" alt="Placeholder Image">
-    </section>
+        <img src="./images/wp8904080.webp" height="300 " width="400" alt="Mern stack">
 
-    <section id="services">
-        <h2>Our Services</h2>
+    </section>
+    <hr>
+    <section id="serices">
+        <h3>Our Services</h3>
         <ul>
             <li>Web Design</li>
             <li>Web Development</li>
@@ -32,53 +34,69 @@
             <li>Content Writing</li>
         </ul>
     </section>
-
+    <hr>
     <section id="video">
-        <h2>Video</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+        <h3>Video</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CvCiNeLnZ00?si=Q1-wlOy595Lub2Ek" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
-
-    <section id="price-list">
-        <h2>Price List</h2>
+    <hr>
+    <section id="list">
+        <p><strong>Price List:</strong></p>
         <table border="1">
             <thead>
                 <tr>
-                    <th>Service</th>
+                    <th>Services</th>
                     <th>Price</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Web Design</td>
-                    <td>$500</td>
+                    <td>$599</td>
                 </tr>
                 <tr>
                     <td>Web Development</td>
-                    <td>$1000</td>
+                    <td>$699</td>
                 </tr>
                 <tr>
                     <td>SEO Optimization</td>
-                    <td>$300</td>
+                    <td>$499</td>
+                </tr>
+                <tr>
+                    <td>Graphic Design</td>
+                    <td>$599</td>
+                </tr>
+                <tr>
+                    <td>Content Writing</td>
+                    <td>$499</td>
                 </tr>
             </tbody>
         </table>
-    </section>
 
+    </section>
+    <hr>
     <section id="form">
-        <h2>Contact Us</h2>
-        <form>
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
+        <form action="">
+            <label for="name">Name:</label> <br>
+            <input type="text" id="name" name="name" required>
+            <br>
+            <label for="email">Email:</label> <br>
+            <input type="email" id="email" name="eamil" required>
+            <br>
             <label for="phone">Phone:</label><br>
-            <input type="tel" id="phone" name="phone" required><br><br>
-            <input type="submit" value="Submit">
+            <input type="tel" id="phone" name="phone" required>
+            <br><br>
+            <input type="submit">
         </form>
+        
     </section>
 
     <footer>
-        <p>Contact Information: example@example.com | 123-456-7890</p>
+        <p>Contact Information:abhimadasu@gmail.com | 123-456-7890</p>
     </footer>
+
+
 </body>
 </html>
