--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section id="image">
         <h2>Image</h2>
-        <img src="wp8904080.webp" height="300 " width="400" alt="Mern stack">
+        <img src="https://wallpapercave.com/wp/wp8904080.jpg" height="300 " width="400" alt="Mern stack">
 
     </section>
     <hr>
